<resources>
    <string name="app_name">LIconPackKit</string>
    <string name="home">Home</string>
    <string name="icon">Icons</string>
    <string name="request">Request</string>
    <string name="about">About</string>
    <string name="support_quantity">Coverage</string>
    <string name="support_quantity_help">The icon coverage of the installed applications on the current device</string>
    <string name="summary_version">Click to view the updated content of the version</string>
    <string name="open_link_error">Cannot find an application that can be opened</string>
    <string name="power_by">power by</string>
    <string name="chosen">Has selected %1$d</string>
    <string name="send">send</string>
    <string name="request_title">Request icon</string>
    <string name="title_choose_email">Please select mail application</string>
    <string name="email_request_subject">Icon package adaptation application</string>
    <string name="title_crash_dialog">Sorry</string>
    <string name="msg_crash_dialog">Sorry, a crash occurred. \nI sincerely apologize to you for the bad experience, and hope that you can give us tolerance. \nUploading error messages will help us fix these errors. \nthank you for your support!</string>
    <string name="clean_crash_log">Clean All</string>
    <string name="ignore_crash">Ignore</string>
    <string name="send_crash">send</string>
    <string name="new_support">New supported</string>
    <string name="new_icon">New Icon</string>
</resources>