<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pageRoot">

        <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/headerImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/colorPrimary"/>

        <com.lollipop.iconcore.ui.IconImageView
            android:layout_width="0px"
            android:layout_height="@dimen/preview_icon_size"
            app:layout_constraintTop_toTopOf="@id/headerImageView"
            app:layout_constraintLeft_toLeftOf="@id/headerImageView"
            app:layout_constraintRight_toLeftOf="@id/previewIcon2"
            app:layout_constraintBottom_toBottomOf="@id/headerImageView"
            app:layout_constraintDimensionRatio="1:1"
            android:id="@+id/previewIcon1"/>

        <com.lollipop.iconcore.ui.IconImageView
            android:layout_width="0px"
            android:layout_height="0px"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="@id/previewIcon1"
            app:layout_constraintLeft_toRightOf="@id/previewIcon1"
            app:layout_constraintBottom_toBottomOf="@id/previewIcon1"
            app:layout_constraintRight_toLeftOf="@id/previewIcon3"
            android:id="@+id/previewIcon2"/>

        <com.lollipop.iconcore.ui.IconImageView
            android:layout_width="0px"
            android:layout_height="0px"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="@id/previewIcon2"
            app:layout_constraintLeft_toRightOf="@id/previewIcon2"
            app:layout_constraintBottom_toBottomOf="@id/previewIcon2"
            app:layout_constraintRight_toLeftOf="@id/previewIcon4"
            android:id="@+id/previewIcon3"/>

        <com.lollipop.iconcore.ui.IconImageView
            android:layout_width="0px"
            android:layout_height="0px"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="@id/previewIcon3"
            app:layout_constraintLeft_toRightOf="@id/previewIcon3"
            app:layout_constraintBottom_toBottomOf="@id/previewIcon3"
            app:layout_constraintRight_toRightOf="@id/headerImageView"
            android:id="@+id/previewIcon4"/>

        <TextView
            android:textColor="@color/colorPrimary"
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/app_name_size"
            android:layout_marginTop="@dimen/home_space"
            android:text="@string/app_name"
            app:layout_constraintTop_toBottomOf="@id/headerImageView"
            android:layout_marginLeft="@dimen/left_space"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:textColor="@color/curtainText"
            android:id="@+id/supportQuantityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size"
            android:text="@string/support_quantity"
            app:layout_constraintTop_toBottomOf="@id/appName"
            app:layout_constraintLeft_toLeftOf="@id/appName"
            android:layout_marginTop="@dimen/home_space"/>

        <TextView
            android:textColor="@color/curtainText"
            android:id="@+id/supportQuantityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size"
            app:layout_constraintTop_toTopOf="@id/supportQuantityText"
            app:layout_constraintBottom_toBottomOf="@id/supportQuantityText"
            app:layout_constraintLeft_toRightOf="@id/supportQuantityText"
            android:layout_marginLeft="@dimen/left_space"/>

        <TextView
            android:textColor="@color/curtainTextSecondary"
            android:id="@+id/supportQuantityHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/summary_size"
            android:text="@string/support_quantity_help"
            app:layout_constraintTop_toBottomOf="@id/supportQuantityText"
            app:layout_constraintLeft_toLeftOf="@id/supportQuantityText"/>

        <ProgressBar
            android:id="@+id/supportQuantityProgress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/progress_bar_height"
            android:layout_marginLeft="@dimen/left_space"
            android:layout_marginRight="@dimen/right_space"
            android:layout_marginTop="@dimen/mini_space"
            android:max="100"
            app:layout_constraintTop_toBottomOf="@id/supportQuantityHelp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:progressDrawable="@drawable/progressbar_round"/>

        <View
            android:id="@+id/splitLine1"
            android:layout_width="0px"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/supportQuantityProgress"
            app:layout_constraintLeft_toLeftOf="@id/appName"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/splitLine"
            android:layout_marginTop="@dimen/home_space"/>

        <LinearLayout
            android:id="@+id/versionBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="@id/appName"
            app:layout_constraintTop_toBottomOf="@id/splitLine1"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/left_space">
            <TextView
                android:id="@+id/versionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_size"
                android:textColor="@color/curtainText"/>

            <TextView
                android:textColor="@color/curtainTextSecondary"
                android:id="@+id/versionSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/summary_size"
                android:text="@string/summary_version"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
